--- a/FutureStar/FutureStar_App/templates/layouts/header.html
+++ b/FutureStar/FutureStar_App/templates/layouts/header.html
@@ -71,10 +71,10 @@
                             <div class="lang" data-value="ae"><i class="flag-icon flag-icon-ae"></i><span class="lang-txt">لعربية <span> (ae)</span></span></div>
                         </div>
                     </div>
-                </li> -->
+                </li>-->
 
                 <!-- Search Icon -->
-                <!-- <li><span class="header-search">
+                 <!-- <li><span class="header-search"> 
                     <svg>
                         <use href="{% static 'assets/svg/icon-sprite.svg' %}#search"></use>
                     </svg>
@@ -95,8 +95,8 @@
                 <!-- Cart Dropdown -->
               
 
-                <!-- Notification Dropdown
-                <li class="onhover-dropdown">
+                <!-- Notification Dropdown -->
+                <!-- <li class="onhover-dropdown">
                 <div class="notification-box">
                   <svg>
                     <use href="{% static 'assets/svg/icon-sprite.svg' %}#notification"></use>
@@ -120,14 +120,14 @@
                     <li><a class="f-w-700" href="#">Check all</a></li>
                   </ul>
                 </div>
-              </li> -->
+              </li> --> 
               <li class="profile-nav onhover-dropdown pe-0 py-0">
-                {% if user.profile_picture %}
-                <div class="media profile-media"><img class="b-r-10 profile-img" src="{{ user.profile_picture.url }}" alt="" style="width: 35px; height: 35px;">
-                {% else %}
-                <div class="media profile-media"><img class="b-r-10 profile-img" src="{% static 'assets/images/dashboard/profile.jpg' %}" alt="">
-                {% endif %}
-                
+                  {% if user.profile_picture %}
+                    <div class="media profile-media"><img class="b-r-10 profile-img" src="{{ user.profile_picture.url }}" alt="" style="width: 35px; height: 35px;">
+                  {% else %}
+                    <div class="media profile-media"><img class="b-r-10 profile-img" src="{% static 'assets/images/dashboard/profile.jpg' %}" alt="">
+                  {% endif %}
+
                   {% if request.user.is_authenticated %}
                     <div class="media-body">{{user.username}}<span></span>
 
@@ -135,15 +135,14 @@
                     <div class="media-body">User<span></span>
                   {% endif %}
                 
-                    <p class="mb-0 font-roboto">{{ user.role.name }} <i class="middle fa fa-angle-down"></i></p>
+                    <p class="mb-0 font-roboto">Admin <i class="middle fa fa-angle-down"></i></p>
                   </div>
                 </div>
                 <ul class="profile-dropdown onhover-show-div">
-                  <li><a href="{%url 'user_profile'%}"><i data-feather="user"></i><span>Account </span></a></li>
-                  <!-- <li><a href="#"><i data-feather="mail"></i><span>Inbox</span></a></li>
-                  <li><a href="#"><i data-feather="file-text"></i><span>Taskboard</span></a></li> -->
-                  <!-- <li><a href="{% url 'edit_profile' %}"><i data-feather="settings"></i><span>Update Profile</span></a></li> -->
-                  <li><a href="{% url 'logout' %}"><i data-feather="log-in"> </i><span>Log-out</span></a></li>
+                 <li><a href="{% url 'user_profile' %}" ><i data-feather="user"></i><span>Account </span></a></li>
+                 
+                  <li><a href="#" data-bs-toggle="modal" data-bs-target="#logoutModal"><i data-feather="log-in"> </i><span>Log-out</span></a></li>
+
                 </ul>
               </li>
             </ul>
@@ -152,12 +151,39 @@
             <div class="ProfileCard u-cf">                        
             <div class="ProfileCard-avatar"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-airplay m-0"><path d="M5 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1"></path><polygon points="12 15 17 21 7 21 12 15"></polygon></svg></div>
             <div class="ProfileCard-details">
-                <div class="ProfileCard-realName">
-                  {{user}}
+                <div class="ProfileCard-realName">{{user}}</div>
+               
+             
+
                 </div>
             </div>
           </script>
           <script class="empty-template" type="text/x-handlebars-template"><div class="EmptyMessage">Your search turned up 0 results. This most likely means the backend is down, yikes!</div></script>
         </div>
       </div>
-
+<!-- Page Header Ends -->
+<!-- Logout Confirmation Modal -->
+<div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="logoutModalLabel">Logout Confirmation</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <p>Are you sure you want to log out?</p>
+          </div>
+          <div class="modal-footer">
+              <form method="" action="{% url 'logout' %}">
+                  {% csrf_token %}
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                  <button type="submit" class="btn btn-danger">Log Out</button>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
+<script>
+  // Feather icons
+  feather.replace();
+</script>
